fixed white space

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@
 /* Dots */
 /* line 133, /Users/samiralyateem/Projects/SalesVistaRaw/slick-1.8.1/slick/slick-theme.scss */
 .slick-dotted.slick-slider {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 /* line 137, /Users/samiralyateem/Projects/SalesVistaRaw/slick-1.8.1/slick/slick-theme.scss */
@@ -731,7 +731,12 @@ h3,
   }
 }
 
-/* line 57, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 56, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+.white {
+  color: white;
+}
+
+/* line 60, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 h4,
 .h4 {
   color: white;
@@ -742,7 +747,7 @@ h4,
 }
 
 @media (min-width: 768px) {
-  /* line 57, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+  /* line 60, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
   h4,
   .h4 {
     font-size: 24px;
@@ -752,7 +757,7 @@ h4,
   }
 }
 
-/* line 66, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 69, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 h5,
 .h5 {
   color: black;
@@ -762,7 +767,7 @@ h5,
   line-height: 1.875rem;
 }
 
-/* line 72, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 75, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 h6,
 .h6 {
   font-size: 18px;
@@ -771,7 +776,7 @@ h6,
   line-height: 1.75rem;
 }
 
-/* line 77, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 80, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 p,
 .p {
   color: white;
@@ -784,13 +789,13 @@ p,
   text-align: center;
 }
 
-/* line 84, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 87, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 p:last-child,
 .p:last-child {
   margin-bottom: 0;
 }
 
-/* line 85, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 88, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 p small,
 .p small {
   font-size: 12px;
@@ -799,7 +804,7 @@ p small,
   line-height: 1.125rem;
 }
 
-/* line 88, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 91, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 p.lead,
 .p.lead {
   font-size: 20px;
@@ -809,7 +814,7 @@ p.lead,
 }
 
 @media (min-width: 992px) {
-  /* line 88, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+  /* line 91, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
   p.lead,
   .p.lead {
     font-size: 24px;
@@ -819,7 +824,7 @@ p.lead,
   }
 }
 
-/* line 94, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 97, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 p.text-16,
 .p.text-16 {
   font-size: 16px;
@@ -828,12 +833,12 @@ p.text-16,
   line-height: 2.25rem;
 }
 
-/* line 100, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 103, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 .p-black {
   color: black;
 }
 
-/* line 105, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 108, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 a {
   color: white;
   text-decoration: none;
@@ -847,13 +852,13 @@ a {
   transition: all 0.2s ease-in-out;
 }
 
-/* line 115, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 118, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 ul li {
   font-size: 22px;
   font-weight: 300;
 }
 
-/* line 122, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
+/* line 125, /Users/samiralyateem/Projects/SalesVistaRaw/sass/base/_typography.scss */
 .black-text {
   color: black;
 }
@@ -2602,7 +2607,7 @@ a img.aligncenter {
   background-position: center center;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 3em 5em 3em 5em;
+  padding: 3em 3em 1em 3em;
 }
 
 /*******************
@@ -2689,7 +2694,7 @@ a img.aligncenter {
   border-radius: 5px;
   border-color: transparent;
   box-shadow: 0 2px 0 0 #487910;
-  margin-top: 3rem;
+  margin-top: 2rem;
   padding: .75rem 1.5rem .75rem 1.5rem;
 }
 
@@ -2753,7 +2758,7 @@ a img.aligncenter {
 
 @media (min-width: 1200px) {
   /* line 12, /Users/samiralyateem/Projects/SalesVistaRaw/sass/module/_infoshuffle.scss */
-  .infoshuffle .infoshuffle-row:nth-child(2n-1) {
+  .infoshuffle .infoshuffle-row:nth-child(2n+1) {
     -ms-flex-align: center;
     flex-direction: row-reverse;
   }
@@ -2808,7 +2813,6 @@ a img.aligncenter {
 /* line 1, /Users/samiralyateem/Projects/SalesVistaRaw/sass/module/_carousel.scss */
 .carousel {
   position: relative;
-  padding: 0em 2em 0 2em;
 }
 
 @media (min-width: 992px) {
@@ -2824,19 +2828,20 @@ a img.aligncenter {
   height: auto;
   width: 100%;
   align-content: center;
-  padding: 0em 2em 0 2em;
+  padding: 0em 2em 0em 2em;
 }
 
-/* line 17, /Users/samiralyateem/Projects/SalesVistaRaw/sass/module/_carousel.scss */
+/* line 19, /Users/samiralyateem/Projects/SalesVistaRaw/sass/module/_carousel.scss */
 .carousel .carousel-item .carousel-item-img img {
   width: 100%;
 }
 
-/* line 23, /Users/samiralyateem/Projects/SalesVistaRaw/sass/module/_carousel.scss */
+/* line 25, /Users/samiralyateem/Projects/SalesVistaRaw/sass/module/_carousel.scss */
 .carousel .carousel-item .carousel-item-text {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding: 0em 2em 0em 2em;
 }
 
 /*!
@@ -3443,7 +3448,14 @@ Body Container
 /* line 1, /Users/samiralyateem/Projects/SalesVistaRaw/sass/layout/_title.scss */
 .title {
   text-align: center;
-  padding: 3em 3em 0em 3em;
+  padding: 3em 2em 0em 2em;
+}
+
+@media (min-width: 992px) {
+  /* line 1, /Users/samiralyateem/Projects/SalesVistaRaw/sass/layout/_title.scss */
+  .title {
+    padding: 5em 5em 0em 5em;
+  }
 }
 
 @media (min-width: 1200px) {
