--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -53,6 +53,9 @@ h3,
 		@include fontsize(28,38);
 	}//breakpoint($sm)
 }
+.white{
+	color: white;
+}
 
 h4,
 .h4 {
