--- a/sass/layout/_title.scss
+++ b/sass/layout/_title.scss
@@ -1,6 +1,9 @@
 .title{
     text-align: center;
-    padding: 3em 3em 0em 3em;
+    padding: 3em 2em 0em 2em;
+    @include breakpoint($md){
+        padding: 5em 5em 0em 5em;
+    }
     @include breakpoint($lg){
         padding: 5em 7em 0em 7em;
     }
