--- a/sass/module/_buttons.scss
+++ b/sass/module/_buttons.scss
@@ -67,7 +67,7 @@
 	border-radius: 5px;
 	border-color: transparent;
 	box-shadow: 0 2px 0 0 $darkgreen;
-	margin-top: 3rem;
+	margin-top: 2rem;
 	padding: .75rem 1.5rem .75rem 1.5rem;
 
 	&:hover{
