--- a/sass/module/_cta.scss
+++ b/sass/module/_cta.scss
@@ -4,5 +4,5 @@
   	background-position: center center;
     background-repeat: no-repeat;
     text-align: center;
-    padding: 3em 5em 3em 5em;
+    padding: 3em 3em 1em 3em;
 }
